--- a/index.html
+++ b/index.html
@@ -4,46 +4,19 @@
 	<!-- Define o icon da página -->
 	<link rel="shortcut icon" type="image/png" href="https://goo.gl/3xG36e"/>
 	<title> Planta da Sala de Aula </title>
-<style>
-/* Define o background da tabela, coloca os cantos redondos, define a distância entre o conteúdo e as bordas e a largura da tabela e as bordas ficam mais grossas */
-table, td, th {
-    border: 3px solid black;
-}
-table {
-	background: #13547a;
-	border-radius: 25px;
-    padding: 20px;
-    width: 45%;
-}
-/* Define a posição da tabela da esquerda e centra o texto  */
-.TabelaEsquerda {
-
-	float: left;
-	margin-left: 2%;
-	text-align: center;
-}
-/* Define a posição da tabela da direita e centra o texto */
-.TabelaDireita {
-	float: left;
-	margin-left: 5%;
-	text-align: center;
-}
-/* Nova class para adicionar novas linhas */
-.espaço {
-	height: 10px;
-}
-/* Define o background do site para um degrade */
-body {
-	background: linear-gradient(#F5A141, #F6C141);
-}
-</style>
 </head>
 <body>
+	<!-- Define e centra o título da página -->
 	<h1> <center> <b> Planta da sala de aula </center> </b> </h1>
+	<!-- Cria a tabela da esquerda -->
 <table class="TabelaEsquerda">
+	<!-- A tag <img src= ""> coloca uma imagem na tabela que está na pasta imagens -->
+	<!-- A tag <a href = ""> coloca um link na imagem com a imagem original que se encontra no site da escola -->
+	<!-- A tag <figcaption> coloca uma legenda na imagem -->
+
 	<tr>
 		<td bgcolor="#66efhf"> <a href="https://goo.gl/CTmZ8K"> <center> <img src="imagens\rppequena.jpg"> </center> </a> <figcaption> <h3> <font color="#0000ff"> 24. Ricardo Pereira </h3> </figcaption> </td>
-		<td bgcolor="#66efhf"> <a href="https://goo.gl/kXeHgS"> <center> <img src="imagens\mdpequena.jpg"> </center> </a><figcaption> <h3> <font color="#003fff"> 22. Miguel Dionísio </h3> </figcaption> </td>	
+		<td bgcolor="#66efhf"> <a href="https://goo.gl/kXeHgS"> <center> <img src="imagens\mdpequena.jpg"> </center> </a> <figcaption> <h3> <font color="#003fff"> 22. Miguel Dionísio </h3> </figcaption> </td>	
 		<td bgcolor="#66okid"> <p> <center> <b> <h2> Lugar Vazio </h2> </center> </b> </p>
 		<td bgcolor="#66efhf"> <a href="https://goo.gl/BtZNDS"> <center> <img src="imagens\dspequena.jpg"> </center> </a> <figcaption> <h3> <font color="#000fff"> 10. Daniel Serrano </h3> </figcaption> </td>
 	 <tr>
