--- a/index.html
+++ b/index.html
@@ -1,152 +1,106 @@
 <!DOCTYPE html>
 <html>
-<style>
-/* Define o background da tabela, coloca os cantos redondos, define a distância entre o conteúdo e as bordas e a largura da tabela e as bordas ficam mais grossas */
-table, td, th {
-    border: 3px solid black;
-}
-table {
-	background: #13547a;
-	border-radius: 25px;
-    padding: 20px;
-    width: 45%;
-}
-/* Define a posição da tabela da esquerda e centra o texto  */
-.TabelaEsquerda {
-
-	float: left;
-	margin-left: 2%;
-	text-align: center;
-}
-/* Define a posição da tabela da direita e centra o texto */
-.TabelaDireita {
-	float: left;
-	margin-left: 5%;
-	text-align: center;
-}
-/* Nova class para adicionar novas linhas */
-.espaço {
-	height: 10px;
-}
-/* Define o background do site para um degrade */
-body {
-	background: linear-gradient(#F5A141, #F6C141);
-}
-</style>
 <head>
 	<!-- Define o icon da página -->
 	<link rel="shortcut icon" type="image/png" href="https://goo.gl/3xG36e"/>
 	<title> Planta da Sala de Aula </title>
 </head>
-<body>
+<body bgcolor="orange">
 	<!-- Define e centra o título da página -->
 	<h1> <center> <b> Planta da sala de aula </center> </b> </h1>
 	<!-- Cria a tabela da esquerda -->
-<table class="TabelaEsquerda">
 	<!-- A tag <img src= ""> coloca uma imagem na tabela que está na pasta imagens -->
 	<!-- A tag <a href = ""> coloca um link na imagem com a imagem original que se encontra no site da escola -->
 	<!-- A tag <figcaption> coloca uma legenda na imagem -->
-
+<table align center width="100%" border="3px">
+  	<tr>
+		<td bgcolor="#ff9845" colspan="4" > <center> <b> Legenda: </b> </center> </td>
+		<tr>
+			<td bgcolor="#66aacf" colspan="2"> <center> <b> 12º 2º </b> </center> </td>
+			<td bgcolor="#66efhf" colspan="2"> <center> <b> 12º 4º </b> </center> </td>
+		</tr>
+	</tr>
+</table> 
+</br>	
+<table align="left" width="48%" border="3px">
 	<tr>
-		<td bgcolor="#66efhf"> <a href="https://goo.gl/CTmZ8K"> <center> <img src="imagens\rppequena.jpg"> </center> </a> <figcaption> <h3> <font color="#0000ff"> 24. Ricardo Pereira </h3> </figcaption> </td>
-		<td bgcolor="#66efhf"> <a href="https://goo.gl/kXeHgS"> <center> <img src="imagens\mdpequena.jpg"> </center> </a> <figcaption> <h3> <font color="#003fff"> 22. Miguel Dionísio </h3> </figcaption> </td>	
-		<td bgcolor="#66okid"> <p> <center> <b> <h2> Lugar Vazio </h2> </center> </b> </p>
-		<td bgcolor="#66efhf"> <a href="https://goo.gl/BtZNDS"> <center> <img src="imagens\dspequena.jpg"> </center> </a> <figcaption> <h3> <font color="#000fff"> 10. Daniel Serrano </h3> </figcaption> </td>
+		<td bgcolor="#66efhf" width="25%" height="163"> <a href="imagens\rpgrande.jpg"> <center> <img src="imagens\rppequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#0000ff"> 24. Ricardo Pereira </h3> </center> </figcaption> </td>
+		<td bgcolor="#66efhf" width="25%" height="163"> <a href="imagens\mdgrande.jpg"> <center> <img src="imagens\mdpequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#003fff"> 22. Miguel Dionísio </h3> </center> </figcaption> </td>	
+		<td bgcolor="#66okid" width="25%" height="163"> <p> <center> <b> <h2> Lugar Vazio </h2> </center> </b> </p>
+		<td bgcolor="#66efhf" width="25%" height="163"> <a href="imagens\dsgrande.jpg"> <center> <img src="imagens\dspequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#000fff"> 10. Daniel Serrano </h3> </center> </figcaption> </td>
 	 <tr>
 		<td bgcolor="#ff9845" colspan="2"> <center> <b> PC14 </b> </center> </td>
 		<td bgcolor="#ff9845" colspan="2"> <center> <b> PC15 </b> </center> </td>
 	</tr>	
   </tr>
-  
-  <tr class="espaço"></tr>
-  
-
 		<tr>
-		<td bgcolor="#66efhf"> <a href="https://goo.gl/u1xoCL"> <center> <img src="imagens\rgpequena.jpg"> </center> </a> <figcaption> <h3> <font color="#001fff"> 23. Ricardo Gonçalves </h3> </figcaption> </td>
-		<td bgcolor="#66okid"> <p> <center> <b> <h2> Lugar Vazio </h2> </center> </b> </p>
-		<td bgcolor="#66efhf"> <a href="https://goo.gl/Ff7yei"> <center> <img src="imagens\tapequena.jpg"> </a> </center> <figcaption> <h3> <font color="#002fff"> 28. Tiago Arriegas </h3> </figcaption> </td>
-		<td bgcolor="#66efhf"> <a href="https://goo.gl/Nk4K5t"> <center> <img src="imagens\mipequena.jpg"> </center> </a> <figcaption> <h3> <font color="#004fff"> 20. Maria Inês </h3> </figcaption> </td>
+		<td bgcolor="#66efhf" width="25%" height="163"> <a href="imagens\rggrande.jpg"> <center> <img src="imagens\rgpequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#001fff"> 23. Ricardo Gonçalves </h3> </center> </figcaption> </td>
+		<td bgcolor="#66okid" width="25%" height="163"> <p> <center> <b> <h2> Lugar Vazio </h2> </center> </b> </p>
+		<td bgcolor="#66efhf" width="25%" height="163"> <a href="imagens\tagrande.jpg"> <center> <img src="imagens\tapequena.jpg" width="150" height="150"> </a> </center> <figcaption> <center> <h3> <font color="#002fff"> 28. Tiago Arriegas </h3> </center> </figcaption> </td>
+		<td bgcolor="#66efhf" width="25%" height="163"> <a href="imagens\migrande.jpg"> <center> <img src="imagens\mipequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#004fff"> 20. Maria Inês </h3> </center> </figcaption> </td>
 	<tr>
 		<td bgcolor="#ff9845" colspan="2"> <center> <b> PC10 </b> </center> </td>
 		<td bgcolor="#ff9845" colspan="2"> <center> <b> PC11 </b> </center> </td>
 	</tr>	
   </tr>
-  
-  <tr class="espaço"></tr>
-  
 	<tr>
-		<td bgcolor="#66efhf"> <a href="https://goo.gl/MNwgQs"> <center> <img src="imagens\rvpequena.jpg"> </center> </a> <figcaption> <h3> <font color="#005fff"> 25. Rodrigo Valério </h3> </figcaption> </td>
-		<td bgcolor="#66efhf"> <a href="https://goo.gl/5aVAiA"> <center> <img src="imagens\svpequena.jpg"> </center> </a><figcaption> <h3> <font color="#006fff"> 26. Samuel Vaz </h3> </figcaption> </td>	
-		<td bgcolor="#66efhf"> <a href="https://goo.gl/odv1Pa"> <center> <img src="imagens\alpequena.jpg"> </center> </a><figcaption> <h3> <font color="#007fff"> 03. António Lourenço </h3> </figcaption> </td>	
-		<td bgcolor="#66efhf"> <a href="https://goo.gl/1R8pPR"> <center> <img src="imagens\lcpequena.jpg"> </center> </a> <figcaption> <h3> <font color="#008fff"> 18. Luís Catarino </h3> </figcaption> </td>
+		<td bgcolor="#66efhf" width="25%" height="163"> <a href="imagens\rvgrande.jpg"> <center> <img src="imagens\rvpequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#005fff"> 25. Rodrigo Valério </h3> </center> </figcaption> </td>
+		<td bgcolor="#66efhf" width="25%" height="163"> <a href="imagens\svgrande.jpg"> <center> <img src="imagens\svpequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#006fff"> 26. Samuel Vaz </h3> </center> </figcaption> </td>	
+		<td bgcolor="#66efhf" width="25%" height="163"> <a href="imagens\algrande.jpg"> <center> <img src="imagens\alpequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#007fff"> 03. António Lourenço </h3> </center> </figcaption> </td>	
+		<td bgcolor="#66efhf" width="25%" height="163"> <a href="imagens\lcgrande.jpg"> <center> <img src="imagens\lcpequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#008fff"> 18. Luís Catarino </h3> </center> </figcaption> </td>
 	<tr>
 		<td bgcolor="#ff9845" colspan="2"> <center> <b> PC06 </b> </center> </td>
 		<td bgcolor="#ff9845" colspan="2"> <center> <b> PC07 </b> </center> </td>
 	</tr>	
-  </tr>
-  
-  <tr class="espaço"></tr>
-  
+  </tr> 
 
 	<tr>
-		<td bgcolor="#66aacf"> <center> <a href="https://goo.gl/QGa2mb"> <img src="imagens\slpequena.jpg"> </center> </a> <figcaption> <h3> <font color="#ff0600"> 23. Sandu Lungu </h3> </figcaption> </td>
-		<td bgcolor="#66aacf"> <center> <a href="https://goo.gl/R25nQ7"> <img src="imagens\jnpequena.jpg"> </center> </a><figcaption> <h3> <font color="#ff0700"> 13. João Neves </h3> </figcaption> </td>	
-		<td bgcolor="#66efhf"> <center> <a href="https://goo.gl/eUf6s7"> <img src="imagens\gspequena.jpg"> </center> </a><figcaption> <h3> <font color="#009fff"> 15. Gonçalo Simão </h3> </figcaption> </td>	
-		<td bgcolor="#66efhf"> <center> <a href="https://goo.gl/ymven8"> <img src="imagens\aacpequena.jpg"> </center> </a> <figcaption> <h3> <font color="#010fff"> 29. António Campaniço </h3> </figcaption> </td>
+		<td bgcolor="#66aacf" width="25%" height="163"> <center> <a href="imagens\slgrande.jpg"> <img src="imagens\slpequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#ff0600"> 23. Sandu Lungu </h3> </center> </figcaption> </td>
+		<td bgcolor="#66aacf" width="25%" height="163"> <center> <a href="imagens\jngrande.jpg"> <img src="imagens\jnpequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#ff0700"> 13. João Neves </h3> </center> </figcaption> </td>	
+		<td bgcolor="#66efhf" width="25%" height="163"> <center> <a href="imagens\gsgrande.jpg"> <img src="imagens\gspequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#009fff"> 15. Gonçalo Simão </h3> </center> </figcaption> </td>	
+		<td bgcolor="#66efhf" width="25%" height="163"> <center> <a href="imagens\aacgrande.jpg"> <img src="imagens\aacpequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#010fff"> 29. António Campaniço </h3> </center> </figcaption> </td>
 	<tr>
 		<td bgcolor="#ff9845" colspan="2"> <center> <b> PC02 </b> </center> </td>
 		<td bgcolor="#ff9845" colspan="2"> <center> <b> PC03 </b> </center> </td>
 	</tr>	
   </tr>
 </table>  
-<table class="TabelaDireita">
-  	<tr>
-		<td bgcolor="#ff9845" colspan="4"> <center> <b> Legenda: </b> </center> </td>
+<table align="right" width="48%" border="3px">
 		<tr>
-			<td bgcolor="#66aacf" colspan="2" rowspan="2"> <center> <b> 12º 2º </b> </center> </td>
-			<td bgcolor="#66efhf" colspan="2" rowspan="2"> <center> <b> 12º 4º </b> </center> </td>
-		</tr>
-	</tr>
-			<tr class="espaço"></tr>
-			<tr class="espaço"></tr>
-			<tr class="espaço"></tr>
-			<tr class="espaço"></tr>
-			<tr class="espaço"></tr>
-			<tr class="espaço"></tr>
-			<tr class="espaço"></tr>
-			<tr class="espaço"></tr>
-			
+			<td bgcolor="#66okid" height="213"> <p> <center> <b> <h2> Lugar Vazio </h2> </center> </b> </p>
+			<td bgcolor="#66okid" height="213"> <p> <center> <b> <h2> Lugar Vazio </h2> </center> </b> </p>
+			<td bgcolor="#66okid" height="213"> <p> <center> <b> <h2> Lugar Vazio </h2> </center> </b> </p>
+			<td bgcolor="#66okid" height="213"> <p> <center> <b> <h2> Lugar Vazio </h2> </center> </b> </p>
 		<tr>
-			<td bgcolor="#66okid"> <p> <center> <b> <h2> Lugar Vazio </h2> </center> </b> </p>
-			<td bgcolor="#66aacf"> <center> <a href="https://goo.gl/9tgWWA"> <img src="imagens\frpequena.jpg"> </center> </a> <figcaption> <h3> <font color="#ff0000"> 09. Francisco Rodrigues </h3> </figcaption> </td>
-			<td bgcolor="#66aacf"> <center> <a href="https://goo.gl/YNTRvQ"> <img src="imagens\nrpequena.jpg"> </center> </a><figcaption> <h3> <font color="#ff0100"> 20. Nuno Rodrigues </h3> </figcaption> </td>
-			<td bgcolor="#66okid"> <p> <center> <b> <h2> Lugar Vazio </h2> </center> </b> </p>
+			<td bgcolor="#ff9845" colspan="2"> <center> <b> Não Existe </b> </center> </td>
+			<td bgcolor="#ff9845" colspan="2"> <center> <b> PC16 </b> </center> </td>
+		<tr>
+			<td bgcolor="#66okid" width="25%" height="163"> <p> <center> <b> <h2> Lugar Vazio </h2> </center> </b> </p>
+			<td bgcolor="#66aacf" width="25%" height="163"> <center> <a href="imagens\frgrande.jpg"> <img src="imagens\frpequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#ff0000"> 09. Francisco Rodrigues </h3> </center> </figcaption> </td>
+			<td bgcolor="#66aacf" width="25%" height="163"> <center> <a href="imagens\nrgrande.jpg"> <img src="imagens\nrpequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#ff0100"> 20. Nuno Rodrigues </h3> </center> </figcaption> </td>
+			<td bgcolor="#66okid" width="25%" height="163"> <p> <center> <b> <h2> Lugar Vazio </h2> </center> </b> </p>
 		<tr>
 			<td bgcolor="#ff9845" colspan="2"> <center> <b> PC12 </b> </center> </td>
 			<td bgcolor="#ff9845" colspan="2"> <center> <b> PC13 </b> </center> </td>
 		</tr>	
     </tr>
 	
-	<tr class="espaço"></tr>
-	
 		<tr>	
-			<td bgcolor="#66aacf"> <center> <a href="https://goo.gl/wG7CHp"> <img src="imagens\pfpequena.jpg"> </center> </a> <figcaption> <h3> <font color="#ff0200"> 21. Pedro Fonseca </h3> </figcaption> </td>
-			<td bgcolor="#66aacf"> <center> <a href="https://goo.gl/2S1K4J"> <img src="imagens\fepequena.jpg"> </center> </a><figcaption> <h3> <font color="#ff0300"> 08. Francisco Esteves </h3> </figcaption> </td>	
-			<td bgcolor="#66aacf"> <center> <a href="https://goo.gl/BEwmmm"> <img src="imagens\mppequena.jpg"> </center> </a><figcaption> <h3> <font color="#ff0400"> 18. Miguel Pinto </h3> </figcaption> </td>	
-			<td bgcolor="#66aacf"> <center> <a href="https://goo.gl/bzv4oV"> <img src="imagens\jmpequena.jpg"> </center> </a> <figcaption> <h3> <font color="#ff0500"> 14. João Madeira </h3> </figcaption> </td>
+			<td bgcolor="#66aacf" width="25%" height="163"> <center> <a href="imagens\pfgrande.jpg"> <img src="imagens\pfpequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#ff0200"> 21. Pedro Fonseca </h3> </center> </figcaption> </td>
+			<td bgcolor="#66aacf" width="25%" height="163"> <center> <a href="imagens\fegrande.jpg"> <img src="imagens\fepequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#ff0300"> 08. Francisco Esteves </h3> </center> </figcaption> </td>	
+			<td bgcolor="#66aacf" width="25%" height="163"> <center> <a href="imagens\mpgrande.jpg"> <img src="imagens\mppequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#ff0400"> 18. Miguel Pinto </h3> </center> </figcaption> </td>	
+			<td bgcolor="#66aacf" width="25%" height="163"> <center> <a href="imagens\jmgrande.jpg"> <img src="imagens\jmpequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#ff0500"> 14. João Madeira </h3> </center> </figcaption> </td>
 		<tr>
 			<td bgcolor="#ff9845" colspan="2"> <center> <b> PC08 </b> </center> </td>
 			<td bgcolor="#ff9845" colspan="2"> <center> <b> PC09 </b> </center> </td>
 		</tr>	
     </tr>
 	
-	<tr class="espaço"></tr>
-	
 		<tr>
-			<td bgcolor="#66efhf"> <center> <a href="https://goo.gl/fXG1nJ"> <img src="imagens\bbpequena.jpg"> </center> </a> <figcaption> <h3> <font color="#011fff"> 06. Beatriz Barreto </h3> </figcaption> </td>
-			<td bgcolor="#66aacf"> <center> <a href="https://goo.gl/2XhKkb"> <img src="imagens\tfpequena.jpg"> </center> </a><figcaption> <h3> <font color="#ff0800"> 26. Tomás Feith </h3> </figcaption> </td>	
-			<td bgcolor="#66efhf"> <center> <a href="https://goo.gl/hzybDs"> <img src="imagens\ffpequena.jpg"> </center> </a><figcaption> <h3> <font color="#012fff"> 13. Fábio Franco </h3> </figcaption> </td>	
-			<td bgcolor="#66efhf"> <center> <a href="https://goo.gl/uUzaXX"> <img src="imagens\acpequena.jpg"> </center> </a> <figcaption> <h3> <font color="#013fff"> 02. André Costa </h3> </figcaption> </td>
+			<td bgcolor="#66efhf" width="25%" height="163"> <center> <a href="imagens\bbgrande.jpg"> <img src="imagens\bbpequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#011fff"> 06. Beatriz Barreto </h3> </center> </figcaption> </td>
+			<td bgcolor="#66aacf" width="25%" height="163"> <center> <a href="imagens\tfgrande.jpg"> <img src="imagens\tfpequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#ff0800"> 26. Tomás Feith </h3> </center> </figcaption> </td>	
+			<td bgcolor="#66efhf" width="25%" height="163"> <center> <a href="imagens\ffgrande.jpg"> <img src="imagens\ffpequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#012fff"> 13. Fábio Franco </h3> </center> </figcaption> </td>	
+			<td bgcolor="#66efhf" width="25%" height="163"> <center> <a href="imagens\acgrande.jpg"> <img src="imagens\acpequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#013fff"> 02. André Costa </h3> </center> </figcaption> </td>
 		<tr>
 			<td bgcolor="#ff9845" colspan="2"> <center> <b> PC04 </b> </center> </td>
 			<td bgcolor="#ff9845" colspan="2"> <center> <b> PC05 </b> </center> </td>
