--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 </br>	
 <table align="left" width="48%" border="3px">
 	<tr>
-		<td bgcolor="#66efhf" width="25%" height="163"> <a href="imagens\rpgrande.jpg"> <center> <img src="imagens\rppequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#0000ff"> 24. Ricardo Pereira </h3> </center> </figcaption> </td>
-		<td bgcolor="#66efhf" width="25%" height="163"> <a href="imagens\mdgrande.jpg"> <center> <img src="imagens\mdpequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#003fff"> 22. Miguel Dionísio </h3> </center> </figcaption> </td>	
+		<td bgcolor="#66efhf" width="25%" height="163"> <a href="imagens\rpgrande.png"> <center> <img src="imagens\rppequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#0000ff"> 24. Ricardo Pereira </h3> </center> </figcaption> </td>
+		<td bgcolor="#66efhf" width="25%" height="163"> <a href="imagens\mdgrande.png"> <center> <img src="imagens\mdpequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#003fff"> 22. Miguel Dionísio </h3> </center> </figcaption> </td>	
 		<td bgcolor="#66okid" width="25%" height="163"> <p> <center> <b> <h2> Lugar Vazio </h2> </center> </b> </p>
 		<td bgcolor="#66efhf" width="25%" height="163"> <a href="imagens\dsgrande.jpg"> <center> <img src="imagens\dspequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#000fff"> 10. Daniel Serrano </h3> </center> </figcaption> </td>
 	 <tr>
@@ -36,8 +36,8 @@
 		<tr>
 		<td bgcolor="#66efhf" width="25%" height="163"> <a href="imagens\rggrande.jpg"> <center> <img src="imagens\rgpequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#001fff"> 23. Ricardo Gonçalves </h3> </center> </figcaption> </td>
 		<td bgcolor="#66okid" width="25%" height="163"> <p> <center> <b> <h2> Lugar Vazio </h2> </center> </b> </p>
-		<td bgcolor="#66efhf" width="25%" height="163"> <a href="imagens\tagrande.jpg"> <center> <img src="imagens\tapequena.jpg" width="150" height="150"> </a> </center> <figcaption> <center> <h3> <font color="#002fff"> 28. Tiago Arriegas </h3> </center> </figcaption> </td>
-		<td bgcolor="#66efhf" width="25%" height="163"> <a href="imagens\migrande.jpg"> <center> <img src="imagens\mipequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#004fff"> 20. Maria Inês </h3> </center> </figcaption> </td>
+		<td bgcolor="#66efhf" width="25%" height="163"> <a href="imagens\tagrande.png"> <center> <img src="imagens\tapequena.jpg" width="150" height="150"> </a> </center> <figcaption> <center> <h3> <font color="#002fff"> 28. Tiago Arriegas </h3> </center> </figcaption> </td>
+		<td bgcolor="#66efhf" width="25%" height="163"> <a href="imagens\migrande.png"> <center> <img src="imagens\mipequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#004fff"> 20. Maria Inês </h3> </center> </figcaption> </td>
 	<tr>
 		<td bgcolor="#ff9845" colspan="2"> <center> <b> PC10 </b> </center> </td>
 		<td bgcolor="#ff9845" colspan="2"> <center> <b> PC11 </b> </center> </td>
@@ -55,9 +55,9 @@
   </tr> 
 
 	<tr>
-		<td bgcolor="#66aacf" width="25%" height="163"> <center> <a href="imagens\slgrande.jpg"> <img src="imagens\slpequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#ff0600"> 23. Sandu Lungu </h3> </center> </figcaption> </td>
+		<td bgcolor="#66aacf" width="25%" height="163"> <center> <a href="imagens\slgrande.png"> <img src="imagens\slpequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#ff0600"> 23. Sandu Lungu </h3> </center> </figcaption> </td>
 		<td bgcolor="#66aacf" width="25%" height="163"> <center> <a href="imagens\jngrande.jpg"> <img src="imagens\jnpequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#ff0700"> 13. João Neves </h3> </center> </figcaption> </td>	
-		<td bgcolor="#66efhf" width="25%" height="163"> <center> <a href="imagens\gsgrande.jpg"> <img src="imagens\gspequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#009fff"> 15. Gonçalo Simão </h3> </center> </figcaption> </td>	
+		<td bgcolor="#66efhf" width="25%" height="163"> <center> <a href="imagens\gsgrande.png"> <img src="imagens\gspequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#009fff"> 15. Gonçalo Simão </h3> </center> </figcaption> </td>	
 		<td bgcolor="#66efhf" width="25%" height="163"> <center> <a href="imagens\aacgrande.jpg"> <img src="imagens\aacpequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#010fff"> 29. António Campaniço </h3> </center> </figcaption> </td>
 	<tr>
 		<td bgcolor="#ff9845" colspan="2"> <center> <b> PC02 </b> </center> </td>
@@ -88,7 +88,7 @@
 		<tr>	
 			<td bgcolor="#66aacf" width="25%" height="163"> <center> <a href="imagens\pfgrande.jpg"> <img src="imagens\pfpequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#ff0200"> 21. Pedro Fonseca </h3> </center> </figcaption> </td>
 			<td bgcolor="#66aacf" width="25%" height="163"> <center> <a href="imagens\fegrande.jpg"> <img src="imagens\fepequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#ff0300"> 08. Francisco Esteves </h3> </center> </figcaption> </td>	
-			<td bgcolor="#66aacf" width="25%" height="163"> <center> <a href="imagens\mpgrande.jpg"> <img src="imagens\mppequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#ff0400"> 18. Miguel Pinto </h3> </center> </figcaption> </td>	
+			<td bgcolor="#66aacf" width="25%" height="163"> <center> <a href="imagens\mpgrande.png"> <img src="imagens\mppequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#ff0400"> 18. Miguel Pinto </h3> </center> </figcaption> </td>	
 			<td bgcolor="#66aacf" width="25%" height="163"> <center> <a href="imagens\jmgrande.jpg"> <img src="imagens\jmpequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#ff0500"> 14. João Madeira </h3> </center> </figcaption> </td>
 		<tr>
 			<td bgcolor="#ff9845" colspan="2"> <center> <b> PC08 </b> </center> </td>
@@ -98,8 +98,8 @@
 	
 		<tr>
 			<td bgcolor="#66efhf" width="25%" height="163"> <center> <a href="imagens\bbgrande.jpg"> <img src="imagens\bbpequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#011fff"> 06. Beatriz Barreto </h3> </center> </figcaption> </td>
-			<td bgcolor="#66aacf" width="25%" height="163"> <center> <a href="imagens\tfgrande.jpg"> <img src="imagens\tfpequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#ff0800"> 26. Tomás Feith </h3> </center> </figcaption> </td>	
-			<td bgcolor="#66efhf" width="25%" height="163"> <center> <a href="imagens\ffgrande.jpg"> <img src="imagens\ffpequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#012fff"> 13. Fábio Franco </h3> </center> </figcaption> </td>	
+			<td bgcolor="#66aacf" width="25%" height="163"> <center> <a href="imagens\tfgrande.png"> <img src="imagens\tfpequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#ff0800"> 26. Tomás Feith </h3> </center> </figcaption> </td>	
+			<td bgcolor="#66efhf" width="25%" height="163"> <center> <a href="imagens\ffgrande.png"> <img src="imagens\ffpequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#012fff"> 13. Fábio Franco </h3> </center> </figcaption> </td>	
 			<td bgcolor="#66efhf" width="25%" height="163"> <center> <a href="imagens\acgrande.jpg"> <img src="imagens\acpequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#013fff"> 02. André Costa </h3> </center> </figcaption> </td>
 		<tr>
 			<td bgcolor="#ff9845" colspan="2"> <center> <b> PC04 </b> </center> </td>
