--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 		<tr>	
 			<td bgcolor="#66aacf" width="25%" height="163"> <center> <a href="imagens\pfgrande.jpg"> <img src="imagens\pfpequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#ff0200"> 21. Pedro Fonseca </h3> </center> </figcaption> </td>
 			<td bgcolor="#66aacf" width="25%" height="163"> <center> <a href="imagens\fegrande.jpg"> <img src="imagens\fepequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#ff0300"> 08. Francisco Esteves </h3> </center> </figcaption> </td>	
-			<td bgcolor="#66aacf" width="25%" height="163"> <center> <a href="imagens\mpgrande.png"> <img src="imagens\mppequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#ff0400"> 18. Miguel Pinto </h3> </center> </figcaption> </td>	
+			<td bgcolor="#66aacf" width="25%" height="163"> <center> <a href="imagens\mpgrande.jpg"> <img src="imagens\mppequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#ff0400"> 18. Miguel Pinto </h3> </center> </figcaption> </td>	
 			<td bgcolor="#66aacf" width="25%" height="163"> <center> <a href="imagens\jmgrande.jpg"> <img src="imagens\jmpequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#ff0500"> 14. João Madeira </h3> </center> </figcaption> </td>
 		<tr>
 			<td bgcolor="#ff9845" colspan="2"> <center> <b> PC08 </b> </center> </td>
