--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		<td bgcolor="#66efhf" width="25%" height="163"> <a href="imagens\rggrande.jpg"> <center> <img src="imagens\rgpequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#001fff"> 23. Ricardo Gonçalves </h3> </center> </figcaption> </td>
 		<td bgcolor="#66okid" width="25%" height="163"> <p> <center> <b> <h2> Lugar Vazio </h2> </center> </b> </p>
 		<td bgcolor="#66efhf" width="25%" height="163"> <a href="imagens\tagrande.png"> <center> <img src="imagens\tapequena.jpg" width="150" height="150"> </a> </center> <figcaption> <center> <h3> <font color="#002fff"> 28. Tiago Arriegas </h3> </center> </figcaption> </td>
-		<td bgcolor="#66efhf" width="25%" height="163"> <a href="imagens\migrande.png"> <center> <img src="imagens\mipequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#004fff"> 20. Maria Inês </h3> </center> </figcaption> </td>
+		<td bgcolor="#66efhf" width="25%" height="163"> <a href="imagens\migrande.PNG"> <center> <img src="imagens\mipequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#004fff"> 20. Maria Inês </h3> </center> </figcaption> </td>
 	<tr>
 		<td bgcolor="#ff9845" colspan="2"> <center> <b> PC10 </b> </center> </td>
 		<td bgcolor="#ff9845" colspan="2"> <center> <b> PC11 </b> </center> </td>
