--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 		<tr>
 			<td bgcolor="#66efhf" width="25%" height="163"> <center> <a href="imagens\bbgrande.jpg"> <img src="imagens\bbpequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#011fff"> 06. Beatriz Barreto </h3> </center> </figcaption> </td>
 			<td bgcolor="#66aacf" width="25%" height="163"> <center> <a href="imagens\tfgrande.png"> <img src="imagens\tfpequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#ff0800"> 26. Tomás Feith </h3> </center> </figcaption> </td>	
-			<td bgcolor="#66efhf" width="25%" height="163"> <center> <a href="imagens\ffgrande.png"> <img src="imagens\ffpequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#012fff"> 13. Fábio Franco </h3> </center> </figcaption> </td>	
+			<td bgcolor="#66efhf" width="25%" height="163"> <center> <a href="imagens\ffgrande.png"> <img src="imagens\ffpequena.jpeg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#012fff"> 13. Fábio Franco </h3> </center> </figcaption> </td>	
 			<td bgcolor="#66efhf" width="25%" height="163"> <center> <a href="imagens\acgrande.jpg"> <img src="imagens\acpequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#013fff"> 02. André Costa </h3> </center> </figcaption> </td>
 		<tr>
 			<td bgcolor="#ff9845" colspan="2"> <center> <b> PC04 </b> </center> </td>
