--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		</tr>
 	</tr>
 </table> 
-</br>	
+<br>
 <table align="left" width="48%" border="3px">
 	<tr>
 		<td bgcolor="#66efhf" width="25%" height="163"> <a href="imagens\rpgrande.png"> <center> <img src="imagens\rppequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#0000ff"> 24. Ricardo Pereira </h3> </center> </figcaption> </td>
@@ -33,6 +33,7 @@
 		<td bgcolor="#ff9845" colspan="2"> <center> <b> PC15 </b> </center> </td>
 	</tr>	
   </tr>
+  <tr><td colspan="4"><br></td></tr>
 		<tr>
 		<td bgcolor="#66efhf" width="25%" height="163"> <a href="imagens\rggrande.jpg"> <center> <img src="imagens\rgpequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#001fff"> 23. Ricardo Gonçalves </h3> </center> </figcaption> </td>
 		<td bgcolor="#66okid" width="25%" height="163"> <p> <center> <b> <h2> Lugar Vazio </h2> </center> </b> </p>
@@ -43,6 +44,7 @@
 		<td bgcolor="#ff9845" colspan="2"> <center> <b> PC11 </b> </center> </td>
 	</tr>	
   </tr>
+  <tr><td colspan="4"><br></td></tr>
 	<tr>
 		<td bgcolor="#66efhf" width="25%" height="163"> <a href="imagens\rvgrande.jpg"> <center> <img src="imagens\rvpequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#005fff"> 25. Rodrigo Valério </h3> </center> </figcaption> </td>
 		<td bgcolor="#66efhf" width="25%" height="163"> <a href="imagens\svgrande.jpg"> <center> <img src="imagens\svpequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#006fff"> 26. Samuel Vaz </h3> </center> </figcaption> </td>	
@@ -53,7 +55,7 @@
 		<td bgcolor="#ff9845" colspan="2"> <center> <b> PC07 </b> </center> </td>
 	</tr>	
   </tr> 
-
+	<tr><td colspan="4"><br></td></tr>
 	<tr>
 		<td bgcolor="#66aacf" width="25%" height="163"> <center> <a href="imagens\slgrande.png"> <img src="imagens\slpequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#ff0600"> 23. Sandu Lungu </h3> </center> </figcaption> </td>
 		<td bgcolor="#66aacf" width="25%" height="163"> <center> <a href="imagens\jngrande.jpg"> <img src="imagens\jnpequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#ff0700"> 13. João Neves </h3> </center> </figcaption> </td>	
@@ -74,6 +76,9 @@
 		<tr>
 			<td bgcolor="#ff9845" colspan="2"> <center> <b> Não Existe </b> </center> </td>
 			<td bgcolor="#ff9845" colspan="2"> <center> <b> PC16 </b> </center> </td>
+		</tr>	
+		</tr>
+		<tr><td colspan="4"><br></td></tr>
 		<tr>
 			<td bgcolor="#66okid" width="25%" height="163"> <p> <center> <b> <h2> Lugar Vazio </h2> </center> </b> </p>
 			<td bgcolor="#66aacf" width="25%" height="163"> <center> <a href="imagens\frgrande.jpg"> <img src="imagens\frpequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#ff0000"> 09. Francisco Rodrigues </h3> </center> </figcaption> </td>
@@ -84,7 +89,7 @@
 			<td bgcolor="#ff9845" colspan="2"> <center> <b> PC13 </b> </center> </td>
 		</tr>	
     </tr>
-	
+		<tr><td colspan="4"><br></td></tr>
 		<tr>	
 			<td bgcolor="#66aacf" width="25%" height="163"> <center> <a href="imagens\pfgrande.jpg"> <img src="imagens\pfpequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#ff0200"> 21. Pedro Fonseca </h3> </center> </figcaption> </td>
 			<td bgcolor="#66aacf" width="25%" height="163"> <center> <a href="imagens\fegrande.jpg"> <img src="imagens\fepequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#ff0300"> 08. Francisco Esteves </h3> </center> </figcaption> </td>	
@@ -95,7 +100,7 @@
 			<td bgcolor="#ff9845" colspan="2"> <center> <b> PC09 </b> </center> </td>
 		</tr>	
     </tr>
-	
+		<tr><td colspan="4"><br></td></tr>
 		<tr>
 			<td bgcolor="#66efhf" width="25%" height="163"> <center> <a href="imagens\bbgrande.jpg"> <img src="imagens\bbpequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#011fff"> 06. Beatriz Barreto </h3> </center> </figcaption> </td>
 			<td bgcolor="#66aacf" width="25%" height="163"> <center> <a href="imagens\tfgrande.png"> <img src="imagens\tfpequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#ff0800"> 26. Tomás Feith </h3> </center> </figcaption> </td>	
