--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<link rel="shortcut icon" type="image/png" href="https://goo.gl/3xG36e"/>
 	<title> Planta da Sala de Aula </title>
 </head>
+<!-- define a cor de background -->
 <body bgcolor="orange">
 	<!-- Define e centra o título da página -->
 	<h1> <center> <b> Planta da sala de aula </center> </b> </h1>
@@ -12,6 +13,10 @@
 	<!-- A tag <img src= ""> coloca uma imagem na tabela que está na pasta imagens -->
 	<!-- A tag <a href = ""> coloca um link na imagem com a imagem original que se encontra no site da escola -->
 	<!-- A tag <figcaption> coloca uma legenda na imagem -->
+	<!-- align serve para alinhar o que for pretendido -->
+	<!-- width define a largura da tabela e da imagem -->
+	<!-- font color define a cor do texto -->
+	<!-- O bgcolor quando usado dentro do td define o background da célula -->
 <table align center width="100%" border="3px">
   	<tr>
 		<td bgcolor="#ff9845" colspan="4" > <center> <b> Legenda: </b> </center> </td>
@@ -24,21 +29,23 @@
 <br>
 <table align="left" width="48%" border="3px">
 	<tr>
-		<td bgcolor="#66efhf" width="25%" height="163"> <a href="imagens\rpgrande.png"> <center> <img src="imagens\rppequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#0000ff"> 24. Ricardo Pereira </h3> </center> </figcaption> </td>
-		<td bgcolor="#66efhf" width="25%" height="163"> <a href="imagens\mdgrande.png"> <center> <img src="imagens\mdpequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#003fff"> 22. Miguel Dionísio </h3> </center> </figcaption> </td>	
-		<td bgcolor="#66okid" width="25%" height="163"> <p> <center> <b> <h2> Lugar Vazio </h2> </center> </b> </p>
-		<td bgcolor="#66efhf" width="25%" height="163"> <a href="imagens\dsgrande.jpg"> <center> <img src="imagens\dspequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#000fff"> 10. Daniel Serrano </h3> </center> </figcaption> </td>
+		<td bgcolor="#66efhf" width="25%" height="110"> <a href="imagens\rpgrande.jpg"> <center> <img src="imagens\rppequena.jpg" width="100" height="90"> </center> </a> <figcaption> <center> <h3> <font color="#0000ff"> 24. Ricardo Pereira </h3> </center> </figcaption> </td>
+		<td bgcolor="#66efhf" width="25%" height="110"> <a href="imagens\mdgrande.jpg"> <center> <img src="imagens\mdpequena.jpg" width="100" height="90"> </center> </a> <figcaption> <center> <h3> <font color="#003fff"> 22. Miguel Dionísio </h3> </center> </figcaption> </td>	
+		<td bgcolor="#66okid" width="25%" height="110"> <p> <center> <b> <h2> Lugar Vazio </h2> </center> </b> </p>
+		<td bgcolor="#66efhf" width="25%" height="110"> <a href="imagens\dsgrande.jpg"> <center> <img src="imagens\dspequena.jpg" width="100" height="90"> </center> </a> <figcaption> <center> <h3> <font color="#000fff"> 10. Daniel Serrano </h3> </center> </figcaption> </td>
 	 <tr>
 		<td bgcolor="#ff9845" colspan="2"> <center> <b> PC14 </b> </center> </td>
 		<td bgcolor="#ff9845" colspan="2"> <center> <b> PC15 </b> </center> </td>
 	</tr>	
   </tr>
+  <!-- cria um espaço em branc -->
   <tr><td colspan="4"><br></td></tr>
+  <!-- O resto do código funciona da mesma forma -->
 		<tr>
-		<td bgcolor="#66efhf" width="25%" height="163"> <a href="imagens\rggrande.jpg"> <center> <img src="imagens\rgpequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#001fff"> 23. Ricardo Gonçalves </h3> </center> </figcaption> </td>
-		<td bgcolor="#66okid" width="25%" height="163"> <p> <center> <b> <h2> Lugar Vazio </h2> </center> </b> </p>
-		<td bgcolor="#66efhf" width="25%" height="163"> <a href="imagens\tagrande.png"> <center> <img src="imagens\tapequena.jpg" width="150" height="150"> </a> </center> <figcaption> <center> <h3> <font color="#002fff"> 28. Tiago Arriegas </h3> </center> </figcaption> </td>
-		<td bgcolor="#66efhf" width="25%" height="163"> <a href="imagens\migrande.PNG"> <center> <img src="imagens\mipequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#004fff"> 20. Maria Inês </h3> </center> </figcaption> </td>
+		<td bgcolor="#66efhf" width="25%" height="110"> <a href="imagens\rggrande.jpg"> <center> <img src="imagens\rgpequena.jpg" width="100" height="90"> </center> </a> <figcaption> <center> <h3> <font color="#001fff"> 23. Ricardo Gonçalves </h3> </center> </figcaption> </td>
+		<td bgcolor="#66okid" width="25%" height="110"> <p> <center> <b> <h2> Lugar Vazio </h2> </center> </b> </p>
+		<td bgcolor="#66efhf" width="25%" height="110"> <a href="imagens\tagrande.jpg"> <center> <img src="imagens\tapequena.jpg" width="100" height="90"> </a> </center> <figcaption> <center> <h3> <font color="#002fff"> 28. Tiago Arriegas </h3> </center> </figcaption> </td>
+		<td bgcolor="#66efhf" width="25%" height="110"> <a href="imagens\migrande.jpg"> <center> <img src="imagens\mipequena.jpg" width="100" height="90"> </center> </a> <figcaption> <center> <h3> <font color="#004fff"> 20. Maria Inês </h3> </center> </figcaption> </td>
 	<tr>
 		<td bgcolor="#ff9845" colspan="2"> <center> <b> PC10 </b> </center> </td>
 		<td bgcolor="#ff9845" colspan="2"> <center> <b> PC11 </b> </center> </td>
@@ -46,10 +53,10 @@
   </tr>
   <tr><td colspan="4"><br></td></tr>
 	<tr>
-		<td bgcolor="#66efhf" width="25%" height="163"> <a href="imagens\rvgrande.jpg"> <center> <img src="imagens\rvpequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#005fff"> 25. Rodrigo Valério </h3> </center> </figcaption> </td>
-		<td bgcolor="#66efhf" width="25%" height="163"> <a href="imagens\svgrande.jpg"> <center> <img src="imagens\svpequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#006fff"> 26. Samuel Vaz </h3> </center> </figcaption> </td>	
-		<td bgcolor="#66efhf" width="25%" height="163"> <a href="imagens\algrande.jpg"> <center> <img src="imagens\alpequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#007fff"> 03. António Lourenço </h3> </center> </figcaption> </td>	
-		<td bgcolor="#66efhf" width="25%" height="163"> <a href="imagens\lcgrande.jpg"> <center> <img src="imagens\lcpequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#008fff"> 18. Luís Catarino </h3> </center> </figcaption> </td>
+		<td bgcolor="#66efhf" width="25%" height="110"> <a href="imagens\rvgrande.jpg"> <center> <img src="imagens\rvpequena.jpg" width="100" height="90"> </center> </a> <figcaption> <center> <h3> <font color="#005fff"> 25. Rodrigo Valério </h3> </center> </figcaption> </td>
+		<td bgcolor="#66efhf" width="25%" height="110"> <a href="imagens\svgrande.jpg"> <center> <img src="imagens\svpequena.jpg" width="100" height="90"> </center> </a> <figcaption> <center> <h3> <font color="#006fff"> 26. Samuel Vaz </h3> </center> </figcaption> </td>	
+		<td bgcolor="#66efhf" width="25%" height="110"> <a href="imagens\algrande.jpg"> <center> <img src="imagens\alpequena.jpg" width="100" height="90"> </center> </a> <figcaption> <center> <h3> <font color="#007fff"> 03. António Lourenço </h3> </center> </figcaption> </td>	
+		<td bgcolor="#66efhf" width="25%" height="110"> <a href="imagens\lcgrande.jpg"> <center> <img src="imagens\lcpequena.jpg" width="100" height="90"> </center> </a> <figcaption> <center> <h3> <font color="#008fff"> 18. Luís Catarino </h3> </center> </figcaption> </td>
 	<tr>
 		<td bgcolor="#ff9845" colspan="2"> <center> <b> PC06 </b> </center> </td>
 		<td bgcolor="#ff9845" colspan="2"> <center> <b> PC07 </b> </center> </td>
@@ -57,10 +64,10 @@
   </tr> 
 	<tr><td colspan="4"><br></td></tr>
 	<tr>
-		<td bgcolor="#66aacf" width="25%" height="163"> <center> <a href="imagens\slgrande.png"> <img src="imagens\slpequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#ff0600"> 23. Sandu Lungu </h3> </center> </figcaption> </td>
-		<td bgcolor="#66aacf" width="25%" height="163"> <center> <a href="imagens\jngrande.jpg"> <img src="imagens\jnpequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#ff0700"> 13. João Neves </h3> </center> </figcaption> </td>	
-		<td bgcolor="#66efhf" width="25%" height="163"> <center> <a href="imagens\gsgrande.png"> <img src="imagens\gspequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#009fff"> 15. Gonçalo Simão </h3> </center> </figcaption> </td>	
-		<td bgcolor="#66efhf" width="25%" height="163"> <center> <a href="imagens\aacgrande.jpg"> <img src="imagens\aacpequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#010fff"> 29. António Campaniço </h3> </center> </figcaption> </td>
+		<td bgcolor="#66aacf" width="25%" height="110"> <center> <a href="imagens\slgrande.jpg"> <img src="imagens\slpequena.jpg" width="100" height="90"> </center> </a> <figcaption> <center> <h3> <font color="#ff0600"> 23. Sandu Lungu </h3> </center> </figcaption> </td>
+		<td bgcolor="#66aacf" width="25%" height="110"> <center> <a href="imagens\jngrande.jpg"> <img src="imagens\jnpequena.jpg" width="100" height="90"> </center> </a> <figcaption> <center> <h3> <font color="#ff0700"> 13. João Neves </h3> </center> </figcaption> </td>	
+		<td bgcolor="#66efhf" width="25%" height="110"> <center> <a href="imagens\gsgrande.jpg"> <img src="imagens\gspequena.jpg" width="100" height="90"> </center> </a> <figcaption> <center> <h3> <font color="#009fff"> 15. Gonçalo Simão </h3> </center> </figcaption> </td>	
+		<td bgcolor="#66efhf" width="25%" height="110"> <center> <a href="imagens\aacgrande.jpg"> <img src="imagens\aacpequena.jpg" width="100" height="90"> </center> </a> <figcaption> <center> <h3> <font color="#010fff"> 29. António Campaniço </h3> </center> </figcaption> </td>
 	<tr>
 		<td bgcolor="#ff9845" colspan="2"> <center> <b> PC02 </b> </center> </td>
 		<td bgcolor="#ff9845" colspan="2"> <center> <b> PC03 </b> </center> </td>
@@ -69,10 +76,10 @@
 </table>  
 <table align="right" width="48%" border="3px">
 		<tr>
-			<td bgcolor="#66okid" height="213"> <p> <center> <b> <h2> Lugar Vazio </h2> </center> </b> </p>
-			<td bgcolor="#66okid" height="213"> <p> <center> <b> <h2> Lugar Vazio </h2> </center> </b> </p>
-			<td bgcolor="#66okid" height="213"> <p> <center> <b> <h2> Lugar Vazio </h2> </center> </b> </p>
-			<td bgcolor="#66okid" height="213"> <p> <center> <b> <h2> Lugar Vazio </h2> </center> </b> </p>
+			<td bgcolor="#66okid" height="152"> <p> <center> <b> <h2> Lugar Vazio </h2> </center> </b> </p>
+			<td bgcolor="#66okid" height="152"> <p> <center> <b> <h2> Lugar Vazio </h2> </center> </b> </p>
+			<td bgcolor="#66okid" height="152"> <p> <center> <b> <h2> Lugar Vazio </h2> </center> </b> </p>
+			<td bgcolor="#66okid" height="152"> <p> <center> <b> <h2> Lugar Vazio </h2> </center> </b> </p>
 		<tr>
 			<td bgcolor="#ff9845" colspan="2"> <center> <b> Não Existe </b> </center> </td>
 			<td bgcolor="#ff9845" colspan="2"> <center> <b> PC16 </b> </center> </td>
@@ -80,10 +87,10 @@
 		</tr>
 		<tr><td colspan="4"><br></td></tr>
 		<tr>
-			<td bgcolor="#66okid" width="25%" height="163"> <p> <center> <b> <h2> Lugar Vazio </h2> </center> </b> </p>
-			<td bgcolor="#66aacf" width="25%" height="163"> <center> <a href="imagens\frgrande.jpg"> <img src="imagens\frpequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#ff0000"> 09. Francisco Rodrigues </h3> </center> </figcaption> </td>
-			<td bgcolor="#66aacf" width="25%" height="163"> <center> <a href="imagens\nrgrande.jpg"> <img src="imagens\nrpequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#ff0100"> 20. Nuno Rodrigues </h3> </center> </figcaption> </td>
-			<td bgcolor="#66okid" width="25%" height="163"> <p> <center> <b> <h2> Lugar Vazio </h2> </center> </b> </p>
+			<td bgcolor="#66okid" width="25%" height="110"> <p> <center> <b> <h2> Lugar Vazio </h2> </center> </b> </p>
+			<td bgcolor="#66aacf" width="25%" height="110"> <center> <a href="imagens\frgrande.jpg"> <img src="imagens\frpequena.jpg" width="100" height="90"> </center> </a> <figcaption> <center> <h3> <font color="#ff0000"> 09. Francisco Rodrigues </h3> </center> </figcaption> </td>
+			<td bgcolor="#66aacf" width="25%" height="110"> <center> <a href="imagens\nrgrande.jpg"> <img src="imagens\nrpequena.jpg" width="100" height="90"> </center> </a> <figcaption> <center> <h3> <font color="#ff0100"> 20. Nuno Rodrigues </h3> </center> </figcaption> </td>
+			<td bgcolor="#66okid" width="25%" height="110"> <p> <center> <b> <h2> Lugar Vazio </h2> </center> </b> </p>
 		<tr>
 			<td bgcolor="#ff9845" colspan="2"> <center> <b> PC12 </b> </center> </td>
 			<td bgcolor="#ff9845" colspan="2"> <center> <b> PC13 </b> </center> </td>
@@ -91,10 +98,10 @@
     </tr>
 		<tr><td colspan="4"><br></td></tr>
 		<tr>	
-			<td bgcolor="#66aacf" width="25%" height="163"> <center> <a href="imagens\pfgrande.jpg"> <img src="imagens\pfpequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#ff0200"> 21. Pedro Fonseca </h3> </center> </figcaption> </td>
-			<td bgcolor="#66aacf" width="25%" height="163"> <center> <a href="imagens\fegrande.jpg"> <img src="imagens\fepequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#ff0300"> 08. Francisco Esteves </h3> </center> </figcaption> </td>	
-			<td bgcolor="#66aacf" width="25%" height="163"> <center> <a href="imagens\mpgrande.jpg"> <img src="imagens\mppequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#ff0400"> 18. Miguel Pinto </h3> </center> </figcaption> </td>	
-			<td bgcolor="#66aacf" width="25%" height="163"> <center> <a href="imagens\jmgrande.jpg"> <img src="imagens\jmpequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#ff0500"> 14. João Madeira </h3> </center> </figcaption> </td>
+			<td bgcolor="#66aacf" width="25%" height="110"> <center> <a href="imagens\pfgrande.jpg"> <img src="imagens\pfpequena.jpg" width="100" height="90"> </center> </a> <figcaption> <center> <h3> <font color="#ff0200"> 21. Pedro Fonseca </h3> </center> </figcaption> </td>
+			<td bgcolor="#66aacf" width="25%" height="110"> <center> <a href="imagens\fegrande.jpg"> <img src="imagens\fepequena.jpg" width="100" height="90"> </center> </a> <figcaption> <center> <h3> <font color="#ff0300"> 08. Francisco Esteves </h3> </center> </figcaption> </td>	
+			<td bgcolor="#66aacf" width="25%" height="110"> <center> <a href="imagens\mpgrande.jpg"> <img src="imagens\mppequena.jpg" width="100" height="90"> </center> </a> <figcaption> <center> <h3> <font color="#ff0400"> 18. Miguel Pinto </h3> </center> </figcaption> </td>	
+			<td bgcolor="#66aacf" width="25%" height="110"> <center> <a href="imagens\jmgrande.jpg"> <img src="imagens\jmpequena.jpg" width="100" height="90"> </center> </a> <figcaption> <center> <h3> <font color="#ff0500"> 14. João Madeira </h3> </center> </figcaption> </td>
 		<tr>
 			<td bgcolor="#ff9845" colspan="2"> <center> <b> PC08 </b> </center> </td>
 			<td bgcolor="#ff9845" colspan="2"> <center> <b> PC09 </b> </center> </td>
@@ -102,10 +109,10 @@
     </tr>
 		<tr><td colspan="4"><br></td></tr>
 		<tr>
-			<td bgcolor="#66efhf" width="25%" height="163"> <center> <a href="imagens\bbgrande.jpg"> <img src="imagens\bbpequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#011fff"> 06. Beatriz Barreto </h3> </center> </figcaption> </td>
-			<td bgcolor="#66aacf" width="25%" height="163"> <center> <a href="imagens\tfgrande.png"> <img src="imagens\tfpequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#ff0800"> 26. Tomás Feith </h3> </center> </figcaption> </td>	
-			<td bgcolor="#66efhf" width="25%" height="163"> <center> <a href="imagens\ffgrande.jpeg"> <img src="imagens\ffpequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#012fff"> 13. Fábio Franco </h3> </center> </figcaption> </td>	
-			<td bgcolor="#66efhf" width="25%" height="163"> <center> <a href="imagens\acgrande.jpg"> <img src="imagens\acpequena.jpg" width="150" height="150"> </center> </a> <figcaption> <center> <h3> <font color="#013fff"> 02. André Costa </h3> </center> </figcaption> </td>
+			<td bgcolor="#66efhf" width="25%" height="110"> <center> <a href="imagens\bbgrande.jpg"> <img src="imagens\bbpequena.jpg" width="100" height="90"> </center> </a> <figcaption> <center> <h3> <font color="#011fff"> 06. Beatriz Barreto </h3> </center> </figcaption> </td>
+			<td bgcolor="#66aacf" width="25%" height="110"> <center> <a href="imagens\tfgrande.jpg"> <img src="imagens\tfpequena.jpg" width="100" height="90"> </center> </a> <figcaption> <center> <h3> <font color="#ff0800"> 26. Tomás Feith </h3> </center> </figcaption> </td>	
+			<td bgcolor="#66efhf" width="25%" height="110"> <center> <a href="imagens\ffgrande.jpg"> <img src="imagens\ffpequena.jpg" width="100" height="90"> </center> </a> <figcaption> <center> <h3> <font color="#012fff"> 13. Fábio Franco </h3> </center> </figcaption> </td>	
+			<td bgcolor="#66efhf" width="25%" height="110"> <center> <a href="imagens\acgrande.jpg"> <img src="imagens\acpequena.jpg" width="100" height="90"> </center> </a> <figcaption> <center> <h3> <font color="#013fff"> 02. André Costa </h3> </center> </figcaption> </td>
 		<tr>
 			<td bgcolor="#ff9845" colspan="2"> <center> <b> PC04 </b> </center> </td>
 			<td bgcolor="#ff9845" colspan="2"> <center> <b> PC05 </b> </center> </td>
